<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/action_fridge"
            android:icon="@drawable/ic_star_white"
            android:title="@string/my_fridge" />
    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search_white"
            android:title="@string/search" />
</menu>