...
                        tools:text="Generic name" />


            </LinearLayout>

            <Button
                    android:id="@+id/btn_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/add_to_the_fridge"
                    android:textColor="@android:color/white"
...
